--- a/app/src/main/res/drawable/ic_events.xml
+++ b/app/src/main/res/drawable/ic_events.xml
@@ -1,18 +1,12 @@
-<vector android:height="24dp" android:viewportHeight="178.672"
-    android:viewportWidth="178.439" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#fff" android:pathData="M9,6h70v70h-70z"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M9.5,6.5h69v69h-69z"/>
+<vector android:height="80dp" android:viewportHeight="170"
+    android:viewportWidth="170" android:width="80dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#fff"
+        android:pathData="M9,6h70v70h-70z"/>
     <path android:fillColor="#fff"
         android:pathData="M99.44,96.67h70v70h-70z"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M99.94,97.17h69v69h-69z"/>
     <path android:fillColor="#fff"
         android:pathData="M99.44,6h70v70h-70z"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M99.94,6.5h69v69h-69z"/>
     <path android:fillColor="#fff"
-        android:pathData="M9,96.67h70v70h-70z"/>
-    <path android:fillColor="#00000000"
-        android:pathData="M9.5,97.17h69v69h-69z"/>
+        android:pathData="M9,96.67 h70 v70 h-70z"/>
 </vector>
