--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -5,13 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".fragments.OTPDialogFragment">
+    tools:context=".fragments.OTPDialogFragment"
+    android:elevation="2dp"
+    tools:targetApi="lollipop">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="1"
-        android:src="@drawable/otp_bg"/>
+        android:src="@drawable/background_otp"/>
 
     <TextView
         android:id="@+id/verifyotp"
