--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -27,8 +27,8 @@
 
         <ImageView
             android:id="@+id/aboutus_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             app:srcCompat="@drawable/ic_back"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
