--- a/app/src/main/res/layout/layout_card_team.xml
+++ b/app/src/main/res/layout/layout_card_team.xml
@@ -7,7 +7,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        android:animateLayoutChanges="true">
 
         <LinearLayout
             android:layout_width="match_parent"
