--- a/app/src/main/res/layout/layout_element_team.xml
+++ b/app/src/main/res/layout/layout_element_team.xml
@@ -36,10 +36,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
                     android:gravity="start"
                     android:maxLines="1"
                     android:text="@string/name"
-                    android:textColor="@color/black"
+                    android:textColor="@color/colorWhite"
                     android:textSize="16sp" />
 
                 <TextView
