--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/</item>
         <item>@font/acme</item>
         <item>@font/alfa_slab_one</item>
         <item>@font/andika</item>
+        <item>@font/audiowide</item>
         <item>@font/bungee_shade</item>
         <item>@font/corben</item>
         <item>@font/lemon</item>
