team fragment done

--- a/app/src/main/res/layout/layout_card_team.xml
+++ b/app/src/main/res/layout/layout_card_team.xml
@@ -47,7 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:focusable="true"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
