--- a/app/src/main/res/layout/layout_card_sponsors.xml
+++ b/app/src/main/res/layout/layout_card_sponsors.xml
@@ -48,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:text="SponsorA"
                 android:textColor="@color/colorWhite"
                 android:textSize="24sp" />
