--- a/app/src/main/res/layout/activity_sponsors.xml
+++ b/app/src/main/res/layout/activity_sponsors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,35 +8,35 @@
 
     <ImageView
         android:id="@+id/spons_bgcircle_5"
-    android:layout_width="950dp"
-    android:layout_height="950dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:src="@drawable/spons_bgcircle5" />
+        android:layout_width="950dp"
+        android:layout_height="950dp"
+        android:src="@drawable/spons_bgcircle5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_4"
         android:layout_width="650dp"
         android:layout_height="650dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/spons_bgcircle4"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/spons_bgcircle4" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_3"
         android:layout_width="450dp"
         android:layout_height="450dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/spons_bgcircle3"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/spons_bgcircle3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_2"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        android:src="@drawable/spons_bgcircle2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/spons_bgcircle2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/spons_bgcircle_1"
@@ -60,24 +59,24 @@
         android:id="@+id/sponsor_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_back"
-        android:focusable="true"
-        android:clickable="true"
         android:layout_margin="24dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:srcCompat="@drawable/ic_back" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="@string/text_spons"
-        android:textSize="40sp"
-        android:textColor="@color/colorWhite"
         android:textAllCaps="true"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/colorWhite"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab"
@@ -86,20 +85,20 @@
         android:layout_marginTop="75dp"
         android:alpha="0.4"
         android:background="@color/transparent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
         app:tabBackground="@color/transparent"
         app:tabIndicatorColor="@color/colorWhite"
-        app:tabMode="scrollable"
         app:tabIndicatorHeight="2dp"
-        app:tabUnboundedRipple="true"
+        app:tabMode="scrollable"
         app:tabRippleColor="@color/common_google_signin_btn_text_dark_disabled"
         app:tabTextColor="@color/colorWhite"
-        app:layout_constraintTop_toTopOf="@+id/toolbar" />
+        app:tabUnboundedRipple="true" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/spons_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tab"/>
+        app:layout_constraintTop_toBottomOf="@+id/tab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
