--- a/app/src/main/res/layout/activity_bquiz.xml
+++ b/app/src/main/res/layout/activity_bquiz.xml
@@ -22,39 +22,41 @@
         android:layout_marginStart="32dp"
         android:layout_marginBottom="140dp"
         android:fontFamily="@font/bebas_neue"
-        android:text="BUSINESS QUIZ"
+        android:text="@string/business_quiz"
         android:textColor="@android:color/white"
-        android:textSize="48dp"
+        android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Lorem ipsum dolor"
+        android:text="@string/placeholder"
         android:textColor="@color/colorWhite"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
+        android:background="@drawable/bquiz_proceed_bg"
+        android:id="@+id/bquiz_proceed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_margin="24dp"
         android:layout_marginEnd="8dp"
-        android:text="Loading"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:fontFamily="@font/bebas_neue"
+        android:text="@string/proceed"
         android:textColor="@color/colorWhite"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/bquiz_intro_progress"
-        app:layout_constraintTop_toTopOf="@+id/bquiz_intro_progress" />
-
-    <ProgressBar
-        android:id="@+id/bquiz_intro_progress"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="8dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
