--- a/app/src/main/res/layout/bottom_sheet_fragment_bquiz.xml
+++ b/app/src/main/res/layout/bottom_sheet_fragment_bquiz.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bquiz_question_bg"
+    android:background="@drawable/bquiz_bottom_sheet_gradiant"
     android:orientation="vertical">
 
     <ProgressBar
@@ -19,8 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
+        android:fontFamily="@font/alegreya_sans_medium"
         android:text="Kindly wait for sometime."
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textColor="@color/colorWhite"
+        android:textSize="24sp" />
 </LinearLayout>
