--- a/app/src/main/res/layout/itemview_bquiz_options.xml
+++ b/app/src/main/res/layout/itemview_bquiz_options.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_margin="8dp"
         android:id="@+id/cvBquizOptions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardBackgroundColor="#333333"
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,18 +24,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
-                android:gravity="right"
+                android:gravity="end"
                 android:text="1. "
-                android:textSize="14sp" />
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tvOptionText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:gravity="right"
+                android:gravity="end"
                 android:text="Option"
-                android:textSize="14sp" />
+                android:textColor="@android:color/white"
+                android:textSize="16sp" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
