--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
         <item>@font/acme</item>
+        <item>@font/alegreya_sans_medium</item>
         <item>@font/alfa_slab_one</item>
         <item>@font/andika</item>
         <item>@font/audiowide</item>
