--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -214,7 +214,7 @@
                         android:gravity="center_vertical">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/mesage"
+                            android:id="@+id/message"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textSize="16sp"/>
