--- a/app/src/main/res/layout/layout_hamburgeritem.xml
+++ b/app/src/main/res/layout/layout_hamburgeritem.xml
@@ -34,6 +34,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/hamburger_item_division_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black_overlay"
