--- a/app/src/main/res/layout/layout_spons_alertdialog.xml
+++ b/app/src/main/res/layout/layout_spons_alertdialog.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/sponsor_image"
+        android:id="@+id/_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/text_spons"
@@ -20,12 +20,12 @@
         android:layout_height="0dp"
         android:minHeight="40dp"
         android:background="@drawable/img_text_background"
-        app:layout_constraintTop_toTopOf="@+id/sponors_name"
+        app:layout_constraintTop_toTopOf="@+id/_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/sponors_name"
+        android:id="@+id/_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/text_spons"
