--- a/app/src/main/res/layout/activity_bquiz.xml
+++ b/app/src/main/res/layout/activity_bquiz.xml
@@ -41,17 +41,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:background="@drawable/bquiz_proceed_bg"
         android:id="@+id/bquiz_proceed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:layout_marginEnd="8dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:background="@drawable/bquiz_proceed_bg"
         android:fontFamily="@font/bebas_neue"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
         android:text="@string/proceed"
         android:textColor="@color/colorWhite"
         android:textSize="24sp"
@@ -59,4 +59,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
+    <ProgressBar
+        android:id="@+id/bquiz_progess_bar"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bquiz_proceed"
+        app:layout_constraintEnd_toEndOf="@+id/bquiz_proceed"
+        app:layout_constraintStart_toStartOf="@+id/bquiz_proceed"
+        app:layout_constraintTop_toTopOf="@+id/bquiz_proceed" />
 </androidx.constraintlayout.widget.ConstraintLayout>
