working bquiz module

--- a/app/src/main/res/layout/activity_bquiz.xml
+++ b/app/src/main/res/layout/activity_bquiz.xml
@@ -42,15 +42,14 @@
 
     <TextView
         android:id="@+id/bquiz_proceed"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/bquiz_proceed_bg"
         android:fontFamily="@font/bebas_neue"
-        android:paddingStart="16dp"
         android:paddingTop="8dp"
-        android:paddingEnd="16dp"
+        android:textAlignment="center"
         android:paddingBottom="8dp"
         android:text="@string/proceed"
         android:textColor="@color/colorWhite"
@@ -63,6 +62,7 @@
         android:id="@+id/bquiz_progess_bar"
         android:layout_width="32dp"
         android:layout_height="32dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/bquiz_proceed"
         app:layout_constraintEnd_toEndOf="@+id/bquiz_proceed"
         app:layout_constraintStart_toStartOf="@+id/bquiz_proceed"
